...
  <string name="group_name">Group name</string>
  <string name="space_name">Space name</string>
  <string name="find_people">Find a name or handle</string>
  <string name="create">Create</string>
  <string name="feed">Feed</string>
  <string name="play">Play</string>
  <string name="nap">Nap</string>
  <string name="wake">Wake</string>
  <string name="rename">Rename</string>
  <string name="release_pet">Release pet</string>
  <string name="food">Food</string>
  <string name="mood">Mood</string>
  <string name="rest">Rest</string>
  <string name="vote">Vote</string>
...
